--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,53 @@
 body {
-  margin: 0;
+    margin: 0;
 }
 
 .App {
-  display: grid;
-  grid-template: 20% auto / 18% auto;
-  height: 100vh;
+    display: grid;
+    grid-template: 20% auto / 18% auto;
+    height: 100vh;
 }
 
 header {
-  background-color: #76a6ce;
-  grid-column: 1 / span 2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 40px;
+    background-image: linear-gradient(to right, #5e60ce, #5390d9, #4ea8de, #48bfe3);
+    grid-column: 1 / span 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px;
 }
 
 h1 {
-  color: white;
-  font-size: 2.8em;
+    color: white;
+    font-size: 2.8em;
 }
 
 button {
-  padding: 10px;
-  font-size: 1.2em;
-  background-color: #548dbb;
-  color: white;
-  border-radius: 10%;
-  border: 2px solid white;
+    padding: 10px;
+    font-size: 1.2em;
+    background-color: #44a0d9;
+    color: white;
+    border-radius: 10%;
+    border: 2px solid white;
 }
 
 nav {
-  background-color: #add5f5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    background-color: #4ea7dea4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 li {
-  border-bottom: 1px solid #001d3d;
-  color: #001d3d;
-  list-style-type: none;
-  font-size: 1.3em;
-  width: 100%;
-  padding: 10px;
-  text-align: center;
+    border-bottom: 1px solid #001d3d;
+    color: #001d3d;
+    list-style-type: none;
+    font-size: 1.3em;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
 }
 
 .feed {
-  background-color: #e3f2fd;
+    background-color: #dbedf8;
 }
