--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ button {
 
 .options {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
@@ -147,7 +148,7 @@ nav img {
   border: 2px solid #5390d9;
 }
 
-.userMusic ul {
+.userList {
   padding: 20px;
   background-color: #dbedf8;
   color: #00458e;
@@ -365,6 +366,7 @@ section h3 {
 .topAlbums ul {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   font-size: .8em;
   gap: 30px;
 }
@@ -402,4 +404,66 @@ section h3 {
   border-radius: 10px;
   text-align: center;
   font-size: 1.2em;
+}
+
+/* MOBILE LAYOUT */
+
+@media only screen and (max-width: 600px) {
+  .App {
+    grid-template: 30% auto / 20% auto;
+  }
+
+  header {
+    flex-direction: column-reverse;
+    padding: 20px;
+  }
+
+  header h1 {
+    margin: 0 auto;
+  }
+
+  .options button, header button {
+    height: 40px;
+  }
+
+  .queryButtons button {
+    padding: 0 10px;
+  }
+
+  nav li {
+    display: flex;
+    padding: 6px;
+    width: auto;
+  }
+
+  nav li p {
+    display: none;
+  }
+
+  .feed {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .playlist li {
+    gap: 5px;
+  }
+
+  .userMusic {
+    flex-direction: column;
+  }
+
+  .userList {
+    width: auto;
+  }
+
+  input {
+    width: auto;
+  }
+
+  .userList h3 {
+    font-size: 1.5em;
+    padding: 0;
+  }
 }
